Add support for SVG rendering